--- a/rifa/index.html
+++ b/rifa/index.html
@@ -191,6 +191,7 @@
         © 2025 Rifa Solidária • Feita com ❤️ para ajudar João Gaspar
     </footer>
 
-    <script src="js/rifa.js"></script>
+    <script src="/Rifa-Solidaria/js/rifa.js"></script>
 </body>
+
 </html>
