--- a/adm/index.html
+++ b/adm/index.html
@@ -125,7 +125,8 @@
         <button onclick="logout()" style="background:#d9534f;">Sair</button>
     </div>
 
-     <script src="js/adm.js"></script>
+     <script src="/Rifa-Solidaria/js/adm.js"></script>
 </body>
+
 
 </html>
