--- a/rifa/index.html
+++ b/rifa/index.html
@@ -183,7 +183,7 @@
             <h3>Forma de pagamento</h3>
             <p>Após reservar seus números, faça o pagamento via <strong>PIX</strong> e envie o comprovante para o
                 organizador.</p>
-            <p><strong>Chave PIX:</strong> <span style="color:#d9534f;">__________________________</span></p>
+            <p><strong>Chave PIX:</strong> <span style="color:#d9534f;"><strong>00829772910</strong> Jaquelini Alves da Silva</span></p>
         </div>
     </main>
 
@@ -195,3 +195,4 @@
 </body>
 
 </html>
+
