--- a/rifa/index.html
+++ b/rifa/index.html
@@ -209,7 +209,7 @@
                 <!-- PIX Copia e Cola -->
                 <textarea id="pixCopiaCola" readonly
                     style="width:100%; height:80px; padding:8px; display: none;">00020126330014BR.GOV.BCB.PIX0111008297729105204000053039865802BR5924Jaquelini Alves da Silva6009SAO PAULO62140510Mz91idOWfi63041478</textarea>
-                <button id="copyPix"
+                <button onclick="copiarPix(this)" id="copyPix"
                     class="btn btn-info d-flex align-items-center gap-2 px-4 py-2 shadow-sm rounded-pill">
                     <i class="bi bi-clipboard"></i>
                     <span>Copiar PIX</span>
@@ -227,3 +227,4 @@
 </body>
 
 </html>
+
