--- a/rifa/index.html
+++ b/rifa/index.html
@@ -197,10 +197,7 @@
 
         <div class="pix-box" style="text-align: center;">
             <h3>Pagamento</h3>
-            <p>Após reservar seus números, faça o pagamento via <strong>PIX</strong> e envie o comprovante para o
-                <br><strong>(49) 98894-5075</strong>.
-            </p>
-
+            <p>Após reservar seus números, faça o pagamento via <strong>PIX</strong></p>
             <!-- QR Code -->
             <div style="text-align:center; margin: 15px 0;">
                 <img src="/Rifa-Solidaria/img/QrCodePix.png" alt="QR Code PIX" width="220">
@@ -224,7 +221,7 @@
     </footer>
 
     <script src="/Rifa-Solidaria/js/rifa.js"></script>
+    <script src="/js/rifa.js"></script>
 </body>
 
 </html>
-
