--- a/adm/index.html
+++ b/adm/index.html
@@ -6,6 +6,8 @@
     <title>Admin Rifa Solidária</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
@@ -109,23 +111,32 @@
             <option value="pago">Pagos</option>
         </select>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Telefone</th>
-                    <th>Quantidade</th>
-                    <th>Valor Total</th>
-                    <th>Números Comprados</th>
-                    <th>Ação</th>
-                </tr>
-            </thead>
-            <tbody id="compradoresTable"></tbody>
-        </table>
+        <div class="container my-4">
+            <div class="table-responsive">
+                <table class="table table-striped table-hover table-bordered align-middle text-center">
+                    <thead class="table-light">
+                        <tr>
+                            <th>Nome</th>
+                            <th>Telefone</th>
+                            <th>Quantidade</th>
+                            <th>Valor Total</th>
+                            <th>Vendedor</th>
+                            <th>Data</th>
+                            <th>Números Comprados</th>
+                            <th>Ação</th>
+                        </tr>
+                    </thead>
+                    <tbody id="compradoresTable"></tbody>
+                </table>
+            </div>
+
+            <div id="resumoVendas" class="mt-3 fw-bold"></div>
+        </div>
+
         <button onclick="logout()" style="background:#d9534f;">Sair</button>
     </div>
 
-     <script src="/Rifa-Solidaria/js/adm.js"></script>
+    <script src="/Rifa-Solidaria/js/adm.js"></script>
 </body>
 
 
