--- a/rifa/index.html
+++ b/rifa/index.html
@@ -177,7 +177,7 @@
             </ul>
         </div>
 
-        <h2>Escolha seus números:</h2>
+        <h2>Escolha seus números e clique no botão parar reservar:</h2>
         <div id="numeros"></div>
 
         <div class="form-box">
@@ -190,6 +190,7 @@
                 <option value="Marcio">Marcio</option>
                 <option value="Gerson">Gerson</option>
                 <option value="Ademir">Ademir</option>
+                <option value="Ademir">Maria</option>
             </select>
 
             <button class="reservar" onclick="reservar()">Reservar Números Selecionados</button>
@@ -224,4 +225,5 @@
 </body>
 
 </html>
+
 
