--- a/rifa/index.html
+++ b/rifa/index.html
@@ -177,7 +177,7 @@
             </ul>
         </div>
 
-        <h2>Escolha seus números e clique no botão parar reservar:</h2>
+        <h4>Escolha seus números, preencha seus dados e clique no botão para reservar:</h2>
         <div id="numeros"></div>
 
         <div class="form-box">
@@ -225,5 +225,6 @@
 </body>
 
 </html>
+
 
 
