--- a/adm/index.html
+++ b/adm/index.html
@@ -110,6 +110,9 @@
             <option value="reservado" selected>Reservados</option>
             <option value="pago">Pagos</option>
         </select>
+        <button class="btn btn-outline-primary btn-sm" onclick="carregarCompradores()">
+            <i class="bi bi-arrow-clockwise"></i> Recarregar
+        </button>
 
         <div class="container my-4">
             <div class="table-responsive">
@@ -141,3 +144,4 @@
 
 
 </html>
+
